操作记录功能开发